--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=8057132505:AAGxvZUG0RPtQX35aUrsRRjWwkodTAPYf-I
 BOT_USERNAME=AfghanCodeBot
-WEBHOOK_URL=https://afghancodersbot.onrender.com/webhook.php
+WEBHOOK_URL=https://mainbot-g94g.onrender.com/webhook.php
