--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 BOT_TOKEN=8057132505:AAGxvZUG0RPtQX35aUrsRRjWwkodTAPYf-I
 BOT_USERNAME=AfghanCodeBot
 WEBHOOK_URL=https://mainbot-g94g.onrender.com/webhook.php
+SERVER_URL=https://mainbot-g94g.onrender.com
+BOT_URL=https://t.me/AfghanCodeBot
