--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ BOT_USERNAME=AfghanCodeBot
 WEBHOOK_URL=https://mainbot-g94g.onrender.com/webhook.php
 SERVER_URL=https://mainbot-g94g.onrender.com
 BOT_URL=https://t.me/AfghanCodeBot
+LOG_CHANNEL=-1002635335795
